[GEOS-11933] Upgrade codebase to Java 17 language features - extensions